2010-02-14  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-attempt-connection): Fix typo. Thanks to Mark
	Harig for spotting it.

2010-02-13  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-attempt-connection): Do not keep on trying to
	connect if inferior process died.

2010-02-07  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-ecl.lisp: Update threading code. ECL doesn't still work
	with :spawn, though. Work in progress.

2010-02-07  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (xref-doit): Declare eql-specializing parameter
	ignorable, as some implementations complain about them not being
	used.

2010-02-01  Mark Harig <idirectscm@aim.com>

	* slime.el: Added missing pieces to make `slime-cycle-connections'
	available from keystrokes.
	(slime-prefix-bindings): Added "\C-xn" entry.
	(slime-cycle-connections): Corrected grammar in doc string.
	(def-slime-selector-method): Added menu item `n' to SLIME selector
	menu.

	* doc/slime.texi: Added a description for the new key sequence for
	`slime-cycle-connections' and for the new menu item in the SLIME
	selector menu.
	Node slime-selector: Added menu item `n' and cross-references to
	"Multiple Connections" node.
	Node Multiple connections: Added C-c C-x n description.  Added
	cross-references to `slime-selector' node.

2010-01-31  Tobias C. Rittweiler <tcr@freebits.de>

	* hyperspec.el: When using C-c C-d ~ TAB, previously there were
	entries for "C" and "C: Character", which unpleasingly crowded the
	completion buffer, so I made it show one entry ("C - Character")
	only. RIP, erik.

2010-01-30  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-cycle-connections): Change docstring, it
	doesn't make connection buffer-local.
	* doc/slime.texi (Multiple connections): document
	slime-cycle-connections.

	* swank.lisp (pathname-as-directory): Treat "/foo/bar" and "/foo/bar/"
	the same.
	(compile-file-output): Use the above function.

2010-01-28  Mark Evenson  <evenson@dada.local>
