@@ -20,10 +20,8 @@
 
 (require 'slime-presentations)
 
-(add-hook 'slime-connected-hook 'slime-install-presentation-streams)
-
-(defun slime-install-presentation-streams ()
-  (slime-eval-async '(swank:swank-require :swank-presentation-streams)))
+(defun slime-presentation-streams-init ()
+  (slime-require :swank-presentation-streams))
 
 (provide 'slime-presentation-streams)
 
